--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <section class="row">
       <div class="about-me">
       <h2>About me</h2>
-      <p>My name is Helena (Helli) Robertson. I have recently graduated from UCL with a BA in Geography with Quantitative Methods. In September, I will be enrolling on the MSc in Computational & Data Journalism at Cardiff University, with the hope of pursuing a career in data journalism thereafter.</p>
+      <p>My name is Helena (Helli) Robertson. This year I will be graduating from UCL with a BA in Geography with Quantitative Methods. In September, I will be enrolling on the MSc in Computational & Data Journalism at Cardiff University, with the hope of pursuing a career in data journalism thereafter.</p>
 
       <p>Last summer, I spent eight weeks as an intern at the Financial Times, producing daily graphics, as well as researching and creating chart-led pieces.</p>
 
