--- a/experience.html
+++ b/experience.html
@@ -66,7 +66,7 @@
               </td>
               <td>
                 <h4>Summer Conferences</h4>
-                <p>European Data Journalism Conference, Malaga <br> CIJ Summer Conference, London</p>
+                <p>CIJ Summer Conference, London</p>
               </td>
             </tr>
             <tr>
