--- a/experience.html
+++ b/experience.html
@@ -65,8 +65,7 @@
                 <img style="display:block;" src="imgs/timeline-dot-teal.png">
               </td>
               <td>
-                <h4>Summer Conferences</h4>
-                <p>CIJ Summer Conference, London</p>
+                <h4>CIJ Summer Conference</h4>
               </td>
             </tr>
             <tr>
