--- a/aboutme.html
+++ b/aboutme.html
@@ -38,20 +38,7 @@
     </section>
 
     <section class="row">
-          <div class="skills">
-
-        <section class="col2-1">
-          <h1>Qualifications</h1>
-          <h2>UCL: BA Geography with Quantitative Methods</h2>
-          <img src="imgs/ba_skills.png" alt="qualifications skills">
-        </section><!--
-        --><section class="col2-2">
-          <h1>Tools</h1>
-          <img src="imgs/tools-linear.png" alt="tools skills">
-        </section>
-
-          </div>
-
+    	<p><em>In progress...</em></p>
     </section>
 
 
