update skills jigsaw

--- a/aboutme.html
+++ b/aboutme.html
@@ -38,7 +38,7 @@
     </section>
 
     <section class="row">
-    	<p><em>In progress...</em></p>
+    	<img src = "imgs/jigsaw_skills.png">
     </section>
 
 
