--- a/work.html
+++ b/work.html
@@ -1,122 +1,109 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-  	<meta charset="utf-8">
-  	<title>Work</title>
-  	<link rel="stylesheet" href="assets/stylesheets/main.css">
-  </head>
-  <body>
+
+<head>
+  <meta charset="utf-8">
+  <title>Work</title>
+  <link rel="stylesheet" href="assets/stylesheets/main.css">
+</head>
+
+<body>
 
 
-  	<!-- HEADER -->
-    <header class="primary-header container group">
+  <!-- HEADER -->
+  <header>
 
-      <h1 class="logo">
-        <a href="work.html">Work</a>
-      </h1>
+    <h1>
+      <a href="work.html">Work</a>
+    </h1>
 
-      <nav class="nav primary-nav">
-        <ul>
-          <li><a href="index.html">Home</a></li><!--
-        --> <li><a href="aboutme.html">Skills</a></li><!--
-        --><li><a href="experience.html">Experience</a></li><!--
-        --><li><a href="work.html">Work</a></li>
-        </ul>
-      </nav>
+    <section class="social-links">
+      <a href="mailto:h.robertson@icloud.com"><img src="imgs/mail.png" lat="email link"></a>
+      <a href="https://www.linkedin.com/in/helena-robertson/" target="_blank"><img src="imgs/linkedin.png"
+          lat="linkedin link"></a>
+      <a id="twitter" href="https://twitter.com/hfrobertson11" target="_blank"><img src="imgs/twitter.png"
+          alt="twitter link"></a>
+    </section>
 
-      <section class="social-links">
-        <a href="mailto:h.robertson@icloud.com"><img src="imgs/mail.png" lat = "email link"><!--
-        --><a href="https://www.linkedin.com/in/helena-robertson/" target="_blank" ><img src="imgs/linkedin.png" lat = "linkedin link"></a><!--
-      --><a href="https://twitter.com/hfrobertson11" target="_blank"><img src="imgs/twitter.png" alt = "twitter link"></a>
-      </section>
-
-    </header>
-
-    <!-- Main page -->
-
-  	<section class="row-alt">
-      <div class="lead container">
-      </div>
-  	</section>
-
- <section class="row">
-      <div class="grid">
-          <div class="und-links">
-
-            <h3><strong>Undergraduate coursework examples</strong></h3>
-
-          <div class="col3-1">
-    
-            <img src="work/img-soc-at.jpg" alt="social atlas gender london">
-
-            <ul>
-              <li><a href="work/social-atlas.pdf">Geocomputation: A Social Atlas of Gender in London</a></li>
-            </ul>
-
-            </div><!--
-
-            --><div class="col3-2">
-
-            <img src="work/img-evi-brief.jpg" alt="housing evidence briefs">
-
-            <ul>
-              <li><a href="work/housing-evidence-briefs.pdf">Urban analytics: Evidence Briefs</a></li>
-            </ul>
-
-        </div>
-      </div>
-
-        <div class="ft-links">
-          <h3><strong>Financial Times</strong></h3>
-
-          <div class="col3-1">
-            <img src ="work/indian-doctors-GI.png" alt="graphical insight india">
-
-            <ul>
-              <li><a href="work/indian-doctors-GI.png" alt="graphical insight india">Graphical Insight: India's Medical Brain Drain</a></li>
-            </ul>
-
-          </div><!--
-
-          --><div class="col3-1">          
-
-            <img src = "work/death-penalty-GI.png" alt="graphical insight death penalty US">
-
-            <ul>
-              <li><a href="work/death-penalty-GI.png" alt="graphical insight death penalty US">Graphical Insight (w/ Katherine Riley): US Death Penalty</a></li>
-            </ul>
-
-          </div><!--
-
-          --><div class="col3-3">
-
-            <img src = "work/gender-diversity.png" alt="gender diversity finance">
-
-            <ul>
-              <li><a href="https://www.ft.com/content/80200a46-b27c-11e8-8d14-6f049d06439c?list=intlhomepage" target="blank" alt="graphical insight death pentalty US">Graphic credit: Gender Diversity in Financial Services</a></li>
-            </ul>
-
-          </div>
-
-      </div>
-  </section>
-
-   
-
-    <!-- FOOTER -->
-  	<footer class="primary-footer container group">
-
-      <small>&copy; Helena Robertson</small>
-
-     <nav class="nav">
+    <nav class="nav primary-nav">
       <ul>
-        <li><a href="index.html">Home</a></li><!--
-        --> <li><a href="aboutme.html">Skills</a></li><!--
-        --><li><a href="experience.html">Experience</a></li><!--
-        --> <li><a href="work.html">Work</a></li>
-        </ul>
-      </nav>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="skills.html">Skills</a></li>
+        <li><a href="experience.html">Experience</a></li>
+        <li><a href="work.html">Work</a></li>
+      </ul>
+    </nav>
 
-    </footer>
-  </body>
+
+
+  </header>
+
+  <!-- Main page -->
+
+  <div class="work-grid">
+
+    <h3 id="ft"><strong>Financial Times</strong></h3>
+
+    <div id="ft1">
+      <a href="work/indian-doctors-GI.png" alt="graphical insight india"><img src="work/indian-doctors-GI.png"
+          alt="graphical insight india"></a>
+      <a href="work/indian-doctors-GI.png" alt="graphical insight india">Graphical Insight: India's Medical
+        Brain Drain</a>
+    </div>
+
+    <div id="ft2">
+      <a href="work/death-penalty-GI.png" alt="graphical insight death penalty US"><img src="work/death-penalty-GI.png"
+          alt="graphical insight death penalty US"></a>
+      <a href="work/death-penalty-GI.png" alt="graphical insight death penalty US">Graphical Insight (w/
+        Katherine Riley): US Death Penalty</a>
+    </div>
+
+    <div id="ft3">
+      <a href="https://www.ft.com/content/80200a46-b27c-11e8-8d14-6f049d06439c?list=intlhomepage" target="blank"
+        alt="gender diversity financial services"><img src="work/gender-diversity.png"
+          alt="gender diversity finance"></a>
+      <a href="https://www.ft.com/content/80200a46-b27c-11e8-8d14-6f049d06439c?list=intlhomepage" target="blank"
+        alt="gender diversity financial services">Graphic credit: Gender Diversity in Financial
+        Services</a>
+    </div>
+
+    <h3 id="und"><strong>Undergraduate coursework examples</strong></h3>
+    <div id="und1">
+      <a href="work/social-atlas.pdf"><img src="work/img-soc-at.jpg" alt="social atlas gender london"></a>
+      <a href="work/social-atlas.pdf">Geocomputation: A Social Atlas of Gender in London</a>
+    </div>
+
+    <div id="und2">
+      <a href="work/housing-evidence-briefs.pdf"><img src="work/img-evi-brief.jpg" alt="housing evidence briefs"></a>
+      <a href="work/housing-evidence-briefs.pdf">Urban analytics: Evidence Briefs</a>
+    </div>
+
+
+
+
+  </div>
+
+
+
+  <!-- FOOTER -->
+  <footer>
+
+    <nav class="nav">
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <!--
+        -->
+        <li><a href="skills.html">Skills</a></li>
+        <!--
+        -->
+        <li><a href="experience.html">Experience</a></li>
+        <!--
+        -->
+        <li><a href="work.html">Work</a></li>
+      </ul>
+    </nav>
+
+  </footer>
+</body>
+
 </html>
