--- a/skills.html
+++ b/skills.html
@@ -5,36 +5,45 @@
   <meta charset="utf-8">
   <title>About me</title>
   <link rel="stylesheet" href="assets/stylesheets/main.css">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+    integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <script src="https://d3js.org/d3.v5.min.js"></script>
 </head>
 
 <body>
 
   <!-- HEADER -->
+
   <header>
 
-    <h1>
-      <a href="skills.html">Skills</a>
-    </h1>
+    <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #042c2e;">
+      <a class="navbar-brand" href="index.html">Home</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
 
-    <section class="social-links">
-      <a href="mailto:h.robertson@icloud.com"><img src="imgs/mail.png" lat="email link"></a>
-      <a href="https://www.linkedin.com/in/helena-robertson/" target="_blank"><img src="imgs/linkedin.png"
-          lat="linkedin link"></a>
-      <a id="twitter" href="https://twitter.com/hfrobertson11" target="_blank"><img src="imgs/twitter.png"
-          alt="twitter link"></a>
-    </section>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="skills.html">Skills</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="experience.html">Experience</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="work.html">Work</a>
+          </li>
 
-    <nav class="nav primary-nav">
-      <ul>
-        <li><a href="index.html">Home</a></li>
-
-        <li><a href="skills.html">Skills</a></li>
-
-        <li><a href="experience.html">Experience</a></li>
-
-        <li><a href="work.html">Work</a></li>
-      </ul>
+        </ul>
+        <section class="social-links">
+          <a href="mailto:h.robertson@icloud.com"><img src="imgs/mail.png" lat="email link"></a>
+          <a href="https://www.linkedin.com/in/helena-robertson/" target="_blank"><img src="imgs/linkedin.png"
+              lat="linkedin link"></a>
+          <a id="twitter" href="https://twitter.com/hfrobertson11" target="_blank"><img src="imgs/twitter.png"
+              alt="twitter link"></a>
+        </section>
+      </div>
     </nav>
 
   </header>
@@ -230,20 +239,24 @@
 
 
   <!-- FOOTER -->
-  <footer>
+
+  <footer class="fixed-bottom">
     <nav class="nav">
-      <ul>
-        <li><a href="index.html">Home</a></li>
-
-        <li><a href="skills.html">Skills</a></li>
-
-        <li><a href="experience.html">Experience</a></li>
-
-        <li><a href="work.html">Work</a></li>
-      </ul>
+      <a class="nav-link" href="index.html">Home</a>
+      <a class="nav-link" href="skills.html">Skills</a>
+      <a class="nav-link" href="experience.html.html">Experience</a>
+      <a class="nav-link" href="work.html.html">Work</a>
     </nav>
-
   </footer>
+  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+    integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
+  </script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
+  </script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+    integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
+  </script>
 </body>
 
 </html>
