--- a/skills.html
+++ b/skills.html
@@ -244,7 +244,7 @@
     <nav class="nav">
       <a class="nav-link" href="index.html">Home</a>
       <a class="nav-link" href="skills.html">Skills</a>
-      <a class="nav-link" href="experience.html.html">Experience</a>
+      <a class="nav-link" href="experience.html">Experience</a>
       <a class="nav-link" href="work.html.html">Work</a>
     </nav>
   </footer>
