--- a/skills.html
+++ b/skills.html
@@ -245,7 +245,7 @@
       <a class="nav-link" href="index.html">Home</a>
       <a class="nav-link" href="skills.html">Skills</a>
       <a class="nav-link" href="experience.html">Experience</a>
-      <a class="nav-link" href="work.html.html">Work</a>
+      <a class="nav-link" href="work.html">Work</a>
     </nav>
   </footer>
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
