--- a/work.html
+++ b/work.html
@@ -102,7 +102,7 @@
       <a class="nav-link" href="index.html">Home</a>
       <a class="nav-link" href="skills.html">Skills</a>
       <a class="nav-link" href="experience.html">Experience</a>
-      <a class="nav-link" href="work.html.html">Work</a>
+      <a class="nav-link" href="work.html">Work</a>
     </nav>
   </footer>
 
