Update work page
Create new icons,  create gallery layout

--- a/work.html
+++ b/work.html
@@ -49,51 +49,66 @@
   </header>
 
   <!-- Main page -->
-
-  <div class="work-grid">
-
-    <h3 id="ft"><strong>Financial Times</strong></h3>
-
-    <div id="ft1">
-      <a href="work/indian-doctors-GI.png" alt="graphical insight india"><img src="work/indian-doctors-GI.png"
-          alt="graphical insight india"></a>
-      <a href="work/indian-doctors-GI.png" alt="graphical insight india">Graphical Insight: India's Medical
-        Brain Drain</a>
+  <div class="container-fluid">
+    <div class="row justify-content-md-center">
+      <div class="col-6 col-sm-4">
+        <div class="work-item">
+          <img class="work-img" src="work/icon-GI-india.png" alt="graphical insight india"></a>
+          <div class="overlay">
+            <a href="work/indian-doctors-GI.png" alt="graphical insight india">
+              <div class="text"><b>Financial Times</b> Graphical Insight: India's Medical Brain Drain</div>
+            </a>
+          </div>
+        </div>
+      </div>
+      <div class="col-6 col-sm-4">
+        <div class="work-item">
+          <img class="work-img" src="work/icon-GI-death-pen.png" alt="graphical insight US death penalty"></a>
+          <div class="overlay">
+            <a href="work/death-penalty-GI.png" alt="graphical insight death penalty US">
+              <div class="text"><b>Financial Times</b> Graphical Insight: US Death Penalty <em>(w/ Katherine
+                  Riley)</em>
+              </div>
+            </a>
+          </div>
+        </div>
+      </div>
+      <div class="col-6 col-sm-4">
+        <div class="work-item">
+          <img class="work-img" src="work/icon-gender-div.png" alt="gender diversity financial services"></a>
+          <div class="overlay">
+            <a href="https://www.ft.com/content/80200a46-b27c-11e8-8d14-6f049d06439c?list=intlhomepage" target="blank"
+              alt="gender diversity financial services">
+              <div class="text"><b>Financial Times</b><em> Graphic credit:</em> FinServ Gender Diversity
+              </div>
+            </a>
+          </div>
+        </div>
+      </div>
+      <div class="col-6 col-sm-4">
+        <div class="work-item">
+          <img class="work-img" src="work/icon-social-atlas.png" alt="London gender social atlas"></a>
+          <div class="overlay">
+            <a href="work/social-atlas.pdf">
+              <div class="text"><b>UCL Geography: </b> Social atlas of gender in London
+              </div>
+            </a>
+          </div>
+        </div>
+      </div>
+      <div class="col-6 col-sm-4">
+        <div class="work-item">
+          <img class="work-img" src="work/icon-evi-brief.png" alt="evidence brief housing urban analytics"></a>
+          <div class="overlay">
+            <a href="work/housing-evidence-briefs.pdf">
+              <div class="text"><b>UCL Geography</b> Evidence Briefs: Housing & Urban Analytics
+              </div>
+            </a>
+          </div>
+        </div>
+      </div>
     </div>
-
-    <div id="ft2">
-      <a href="work/death-penalty-GI.png" alt="graphical insight death penalty US"><img src="work/death-penalty-GI.png"
-          alt="graphical insight death penalty US"></a>
-      <a href="work/death-penalty-GI.png" alt="graphical insight death penalty US">Graphical Insight (w/
-        Katherine Riley): US Death Penalty</a>
-    </div>
-
-    <div id="ft3">
-      <a href="https://www.ft.com/content/80200a46-b27c-11e8-8d14-6f049d06439c?list=intlhomepage" target="blank"
-        alt="gender diversity financial services"><img src="work/gender-diversity.png"
-          alt="gender diversity finance"></a>
-      <a href="https://www.ft.com/content/80200a46-b27c-11e8-8d14-6f049d06439c?list=intlhomepage" target="blank"
-        alt="gender diversity financial services">Graphic credit: Gender Diversity in Financial
-        Services</a>
-    </div>
-
-    <h3 id="und"><strong>Undergraduate coursework examples</strong></h3>
-    <div id="und1">
-      <a href="work/social-atlas.pdf"><img src="work/img-soc-at.jpg" alt="social atlas gender london"></a>
-      <a href="work/social-atlas.pdf">Geocomputation: A Social Atlas of Gender in London</a>
-    </div>
-
-    <div id="und2">
-      <a href="work/housing-evidence-briefs.pdf"><img src="work/img-evi-brief.jpg" alt="housing evidence briefs"></a>
-      <a href="work/housing-evidence-briefs.pdf">Urban analytics: Evidence Briefs</a>
-    </div>
-
-
-
-
   </div>
-
-
 
   <!-- FOOTER -->
 
