Footer under content; work grid adjust

--- a/work.html
+++ b/work.html
@@ -50,9 +50,9 @@
   </header>
 
   <!-- Main page -->
-  <div class="container-fluid">
-    <div class="row justify-content-md-center">
-      <div class="col-6 col-sm-4">
+  <div class="container-fluid ">
+    <div class="row justify-content-md-center mb-5">
+      <div class="col-md-4 col-sm-6 col-xs-12">
         <div class="work-item">
           <img class="work-img" src="work/icon-GI-india.png" alt="graphical insight india"></a>
           <div class="overlay">
@@ -62,7 +62,7 @@
           </div>
         </div>
       </div>
-      <div class="col-6 col-sm-4">
+      <div class="col-md-4 col-sm-6 col-xs-12">
         <div class="work-item">
           <img class="work-img" src="work/icon-GI-death-pen.png" alt="graphical insight US death penalty"></a>
           <div class="overlay">
@@ -74,7 +74,7 @@
           </div>
         </div>
       </div>
-      <div class="col-6 col-sm-4">
+      <div class="col-md-4 col-sm-6 col-xs-12">
         <div class="work-item">
           <img class="work-img" src="work/icon-gender-div.png" alt="gender diversity financial services"></a>
           <div class="overlay">
@@ -86,7 +86,7 @@
           </div>
         </div>
       </div>
-      <div class="col-6 col-sm-4">
+      <div class="col-md-4 col-sm-6 col-xs-12">
         <div class="work-item">
           <img class="work-img" src="work/icon-social-atlas.png" alt="London gender social atlas"></a>
           <div class="overlay">
@@ -97,7 +97,7 @@
           </div>
         </div>
       </div>
-      <div class="col-6 col-sm-4">
+      <div class="col-md-4 col-sm-6 col-xs-12">
         <div class="work-item">
           <img class="work-img" src="work/icon-evi-brief.png" alt="evidence brief housing urban analytics"></a>
           <div class="overlay">
@@ -110,7 +110,6 @@
       </div>
     </div>
   </div>
-
   <!-- FOOTER -->
 
   <footer class="fixed-bottom">
