hide paragraphs of timeline on mobile

--- a/experience.html
+++ b/experience.html
@@ -49,7 +49,7 @@
   </header>
 
   <!-- Main page -->
-  <div class="container">
+  <div class="container mb-5">
 
     <table>
       <tbody>
@@ -85,7 +85,8 @@
           </td>
           <td>
             <h4>Sky News Midterms Stringer</h4>
-            <p>Working overnight at Sky News, sourcing Midterms results from broadcasters for projection models & live
+            <p class="d-none d-sm-block">Working overnight at Sky News, sourcing Midterms results from broadcasters
+              for projection models & live
               reporting</p>
           </td>
         </tr>
@@ -98,7 +99,8 @@
           </td>
           <td>
             <h4>Financial Times Internship</h4>
-            <p>8 weeks spent with the Data & Visual Journalism team: producing own daily graphics & Graphical
+            <p class="d-none d-sm-block">8 weeks spent with the Data & Visual Journalism team: producing own daily
+              graphics & Graphical
               Insights, as well as working on collaborative data-led pieces</p>
           </td>
         </tr>
@@ -111,7 +113,7 @@
           </td>
           <td>
             <h4>CIJ Summer Conference</h4>
-            <p>More in-depth introduction to investigative and data journalism</p>
+            <p class="d-none d-sm-block">More in-depth introduction to investigative and data journalism</p>
           </td>
         </tr>
         <tr>
@@ -123,7 +125,7 @@
           </td>
           <td>
             <h4>UCL short courses</h4>
-            <p>Introduction to Stata; Data visualisation</p>
+            <p class="d-none d-sm-block">Introduction to Stata; Data visualisation</p>
           </td>
         </tr>
         <tr>
@@ -135,7 +137,8 @@
           </td>
           <td>
             <h4>UCL: BA Geography with Quantitative Methods</h4>
-            <p>Q-step scheme: learning R for data analysis/statistical methods, mapping & visualisation</p>
+            <p class="d-none d-sm-block">Q-step scheme: learning R for data analysis/statistical methods, mapping &
+              visualisation</p>
           </td>
         </tr>
         <tr>
@@ -147,7 +150,7 @@
           </td>
           <td>
             <h4>Guardian Masterclass</h4>
-            <p>An Introduction to Data Visualisation</p>
+            <p class="d-none d-sm-block">An Introduction to Data Visualisation</p>
           </td>
         </tr>
       </tbody>
