remove dots on timeline on mobile

--- a/experience.html
+++ b/experience.html
@@ -57,7 +57,7 @@
           <th scope="row">
             <date datetime="2019-09-20">September 2019</date>
           </th>
-          <td>
+          <td class="dot">
             <img style="display:block;" src="imgs/timeline-dot-red.png">
           </td>
           <td>
@@ -69,7 +69,7 @@
           <th scope="row">
             <date datetime="2019-07-01">July 2019</date>
           </th>
-          <td>
+          <td class="dot">
             <img style="display:block;" src="imgs/timeline-dot-teal.png">
           </td>
           <td>
@@ -80,7 +80,7 @@
           <th scope="row">
             <date datetime="2018-11-06">November 2018</date>
           </th>
-          <td>
+          <td class="dot">
             <img style="display:block;" src="imgs/timeline-dot-teal.png">
           </td>
           <td>
@@ -94,7 +94,7 @@
           <th scope="row">
             <date datetime="2018-07-01">July-September 2018</date>
           </th>
-          <td>
+          <td class="dot">
             <img style="display:block;" src="imgs/timeline-dot-teal.png">
           </td>
           <td>
@@ -108,7 +108,7 @@
           <th scope="row">
             <date datetime="2017-06-24">Late June 2017</date>
           </th>
-          <td>
+          <td class="dot">
             <img style="display:block;" src="imgs/timeline-dot-teal.png">
           </td>
           <td>
@@ -120,7 +120,7 @@
           <th scope="row">
             <date datetime="2017-06-04">Early June 2017</date>
           </th>
-          <td>
+          <td class="dot">
             <img style="display:block;" src="imgs/timeline-dot-teal.png">
           </td>
           <td>
@@ -132,7 +132,7 @@
           <th scope="row">
             <date datetime="2016-09-20">September 2016</date>
           </th>
-          <td>
+          <td class="dot">
             <img style="display:block;" src="imgs/timeline-dot-teal.png">
           </td>
           <td>
@@ -145,7 +145,7 @@
           <th scope="row">
             <date datetime="2014-04-08">8th April 2014</date>
           </th>
-          <td>
+          <td class="dot">
             <img style="display:block;" src="imgs/timeline-dot-teal.png">
           </td>
           <td>
