adjust footer (stop covering content & remove from mobile)

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
 	<!-- Main page -->
 
-	<section class="mb-5">
+	<section>
 
 
 		<div class="container-fluid">
@@ -79,7 +79,7 @@
 
 	<!-- Footer -->
 
-	<footer class="fixed-bottom">
+	<footer class="d-none d-sm-block">
 		<nav class="nav">
 			<a class="nav-link" href="index.html">Home</a>
 			<a class="nav-link" href="skills.html">Skills</a>
