--- a/skills.html
+++ b/skills.html
@@ -238,7 +238,7 @@
 
   <!-- FOOTER -->
 
-  <footer class="fixed-bottom">
+  <footer class="d-none d-sm-block">
     <nav class="nav">
       <a class="nav-link" href="index.html">Home</a>
       <a class="nav-link" href="skills.html">Skills</a>
