Add airbnb to work items

--- a/work.html
+++ b/work.html
@@ -88,6 +88,17 @@
       </div>
       <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
         <div class="work-item">
+          <img class="work-img" src="work/icon-airbnb.png" alt="airbnb London Edinburgh affordability"></a>
+          <div class="overlay">
+            <a href="https://airbnb-feature.glitch.me/">
+              <div class="text"><b>Cardiff University</b> Airbnb: London & Edinburgh
+              </div>
+            </a>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+        <div class="work-item">
           <img class="work-img" src="work/icon-social-atlas.png" alt="London gender social atlas"></a>
           <div class="overlay">
             <a href="work/social-atlas.pdf">
