correct work item text

--- a/work.html
+++ b/work.html
@@ -102,7 +102,7 @@
           <img class="work-img" src="work/icon-social-atlas.png" alt="London gender social atlas"></a>
           <div class="overlay">
             <a href="work/social-atlas.pdf">
-              <div class="text"><b>UCL Geography: </b> Social atlas of gender in London
+              <div class="text"><b>UCL Geography </b> Social atlas of gender in London
               </div>
             </a>
           </div>
