--- a/work.html
+++ b/work.html
@@ -56,7 +56,7 @@
         <div class="work-item">
           <img class="work-img" src="work/icon-GI-india.png" alt="graphical insight india"></a>
           <div class="overlay">
-            <a href="work/indian-doctors-GI.png" alt="graphical insight india">
+            <a href="work/indian-doctors-GI.png" target="blank" alt="graphical insight india">
               <div class="text"><b>Financial Times</b> Graphical Insight: India's Medical Brain Drain</div>
             </a>
           </div>
@@ -66,7 +66,7 @@
         <div class="work-item">
           <img class="work-img" src="work/icon-GI-death-pen.png" alt="graphical insight US death penalty"></a>
           <div class="overlay">
-            <a href="work/death-penalty-GI.png" alt="graphical insight death penalty US">
+            <a href="work/death-penalty-GI.png" target="blank" alt="graphical insight death penalty US">
               <div class="text"><b>Financial Times</b> Graphical Insight: US Death Penalty <em>(w/ Katherine
                   Riley)</em>
               </div>
@@ -90,7 +90,7 @@
         <div class="work-item">
           <img class="work-img" src="work/icon-airbnb.png" alt="airbnb London Edinburgh affordability"></a>
           <div class="overlay">
-            <a href="https://airbnb-feature.glitch.me/">
+            <a href="https://airbnb-feature.glitch.me/" target="blank">
               <div class="text"><b>Cardiff University</b> Airbnb: London & Edinburgh
               </div>
             </a>
@@ -101,7 +101,7 @@
         <div class="work-item">
           <img class="work-img" src="work/icon-social-atlas.png" alt="London gender social atlas"></a>
           <div class="overlay">
-            <a href="work/social-atlas.pdf">
+            <a href="work/social-atlas.pdf " target="blank">
               <div class="text"><b>UCL Geography </b> Social atlas of gender in London
               </div>
             </a>
@@ -112,7 +112,7 @@
         <div class="work-item">
           <img class="work-img" src="work/icon-evi-brief.png" alt="evidence brief housing urban analytics"></a>
           <div class="overlay">
-            <a href="work/housing-evidence-briefs.pdf">
+            <a href="work/housing-evidence-briefs.pdf" target="blank">
               <div class="text"><b>UCL Geography</b> Evidence Briefs: Housing & Urban Analytics
               </div>
             </a>
