--- a/index.html
+++ b/index.html
@@ -49,33 +49,49 @@
 	</header>
 
 	<!-- Main page -->
-
-	<section>
-
-
-		<div class="container-fluid">
-			<h2>About me</h2>
-			<p>My name is Helena (Helli) Robertson. I am currently undertaking Cardiff University's MSc in Computational
-				and Data Journalism, with the hope of pursuing a career in data journalism when I graduate this year.
+	<div class="container-fluid ">
+		<div class="aboutme-text">
+			<p>My name is Helena (Helli) Robertson and I'm currently a student on Cardiff University's MSc in
+				Computational and Data Journalism.</p>
+			<p>I became interested in data visualisation when I was finishing
+				school, and went to study Geography at UCL on their Q-step course, where I worked on data
+				analysis, mapping and visualisation skills.</p>
+			<p>During my undergraduate course, I found out more about data journalism, undertaking an
+				internship with the Data and Visual Journalism team at the Financial Times during my penultimate year.
 			</p>
 
-			<p>I graduated last year from UCL with a BA in Geography with Quantitative Methods, where I studied human
-				geography alongside modules in data analysis and visualisation, and social science research methods.</p>
-
-			<p>In the summer before my final year at UCL, I spent eight weeks as an intern at the Financial Times,
-				producing daily graphics, as well as researching and creating chart-led pieces.</p>
-			<p>In November 2018, I worked overnight at Sky News assisting with the US Midterms programme. Along with
-				three fellow students, I was sourcing results as they were called by US broadcasters to feed into
-				projection models for the House and Senate, and to report live on the Sky TV programme.</p>
-			<p>In my final undergraduate year, I was part of the Design Team for Pi Media, a multimedia platform at UCL.
-				I assisted with the website and logo redesign, and worked with the magazine editors to produce
-				commissioned graphics for the quarterly print version, as well as for the promotion of articles and
-				events across social media.</p>
-
-
-
+			<p>Having found that data journalism provides a great place to combine skills of research, analysis, design
+				and clear, concise writing, I am now looking for opportunities to join this field.</p>
 		</div>
-	</section>
+		<div class="row justify-content-md-center mb-5">
+			<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+				<div class="card" style="width: 18rem;">
+					<img src="imgs/jigsaw.svg" class="card-img-top" alt="jigsaw skills">
+					<div class="card-body text-center">
+						<a href="skills.html" class="btn-block btn-light">Skills</a>
+					</div>
+				</div>
+			</div>
+
+			<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+				<div class="card" style="width: 18rem;">
+					<img src="imgs/timeline.png" class="card-img-top" alt="jigsaw skills">
+					<div class="card-body  text-center">
+						<a href="experience.html" class="btn-block btn-light">Experience</a>
+					</div>
+				</div>
+			</div>
+
+			<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+				<div class="card" style="width: 18rem;">
+					<img src="imgs/work.png" class="card-img-top" alt="jigsaw skills">
+					<div class="card-body text-center">
+						<a href="work.html" class="btn-block btn-light">Work</a>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
 
 	<!-- Footer -->
 
