remove stickiness of footer to stop covering content

--- a/skills.html
+++ b/skills.html
@@ -11,7 +11,7 @@
   <script src="https://d3js.org/d3.v5.min.js"></script>
 </head>
 
-<body>
+<body class="site">
 
   <!-- HEADER -->
 
@@ -50,7 +50,7 @@
   </header>
 
   <!-- Main page -->
-  <div class="skills-grid">
+  <div class="site-content skills-grid">
     <svg class="jigsaw" viewBox="0 0 4678 3308"
       style="fill-rule:evenodd;clip-rule:evenodd;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:1.5;">
       <g transform="matrix(1.33333,0,0,1.33333,0,0)">
