--- a/experience.html
+++ b/experience.html
@@ -10,7 +10,7 @@
     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 </head>
 
-<body>
+<body class="site">
 
   <!-- HEADER -->
 
@@ -49,7 +49,7 @@
   </header>
 
   <!-- Main page -->
-  <div class="container mb-5">
+  <div class="site-content container timeline">
 
     <table>
       <tbody>
