--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 </head>
 
-<body>
+<body class="site">
 
 	<!-- HEADER -->
 
@@ -49,7 +49,7 @@
 	</header>
 
 	<!-- Main page -->
-	<div class="container-fluid ">
+	<div class="site-content container-fluid ">
 		<div class="aboutme-text">
 			<p>My name is Helena (Helli) Robertson and I'm currently a student on Cardiff University's MSc in
 				Computational and Data Journalism.</p>
@@ -92,6 +92,7 @@
 			</div>
 		</div>
 	</div>
+
 
 	<!-- Footer -->
 
