--- a/work.html
+++ b/work.html
@@ -10,7 +10,7 @@
     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 </head>
 
-<body>
+<body class="site">
 
 
   <!-- HEADER -->
@@ -50,7 +50,7 @@
   </header>
 
   <!-- Main page -->
-  <div class="container-fluid ">
+  <div class="site-content container-fluid ">
     <div class="row justify-content-md-center mb-5">
       <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
         <div class="work-item">
