Skills text js show/hide

--- a/skills.html
+++ b/skills.html
@@ -57,6 +57,12 @@
         <g transform="matrix(1,0,0,1,10.4038,-35.0231)">
           <rect x="-121.941" y="-91.205" width="3672.77" height="2684.55" style="fill:rgb(235,235,235);" />
         </g>
+        <g transform="matrix(1,0,0,1,155.26,94.0295)">
+          <text x="2000.52px" y="200.86px"
+            style="font-family:'HelveticaNeue-Light','Helvetica Neue';font-weight:300;font-size:60.667px;fill:#888;">Click
+            on the big jigsaw pieces to find out more</text>
+
+        </g>
         <g>
           <path class="tool"
             d="M2223.69,570.769C2212.28,561.422 2205,547.226 2205,531.344C2205,503.221 2227.83,480.389 2255.95,480.389C2284.08,480.389 2306.91,503.221 2306.91,531.344C2306.91,547.227 2299.62,561.422 2288.22,570.769L2424.22,570.769L2424.22,704.026C2414.87,692.978 2400.9,685.96 2385.31,685.96C2357.19,685.96 2334.36,708.791 2334.36,736.914C2334.36,765.036 2357.19,787.868 2385.31,787.868C2400.9,787.868 2414.87,780.85 2424.22,769.802L2424.22,906.623L2288.69,906.623C2299.83,915.973 2306.91,929.994 2306.91,945.655C2306.91,973.778 2284.08,996.61 2255.95,996.61C2227.83,996.61 2205,973.778 2205,945.655C2205,929.994 2212.08,915.974 2223.21,906.623L2087.69,906.623L2087.69,773.744C2096.98,783.539 2110.11,789.651 2124.66,789.651C2152.78,789.651 2175.62,766.819 2175.62,738.696C2175.62,710.574 2152.78,687.742 2124.66,687.742C2110.11,687.742 2096.98,693.854 2087.69,703.649L2087.69,570.769L2223.69,570.769Z"
@@ -151,58 +157,58 @@
               style="font-family:'HelveticaNeue-Light', 'Helvetica Neue';font-weight:300;font-size:66.667px;fill:white;">Mapbox</text>
           </g>
         </g>
-        <g>
+        <g onclick="showDiv('data-div')">
           <path class="skill"
             d="M1216.81,1912.25L1081.27,1912.25L1081.27,1772.74C1090.61,1783.38 1104.31,1790.1 1119.57,1790.1C1147.69,1790.1 1170.52,1767.27 1170.52,1739.14C1170.52,1711.02 1147.69,1688.19 1119.57,1688.19C1103.92,1688.19 1090.57,1694.17 1081.27,1705.21L1081.27,1438.52C1090.62,1449.41 1104.48,1456.32 1119.95,1456.32C1148.07,1456.32 1170.9,1433.49 1170.9,1405.37C1170.9,1377.24 1148.07,1354.41 1119.95,1354.41C1104.48,1354.41 1090.62,1361.32 1081.27,1372.21L1081.27,1239.37L1216.57,1239.37C1206.1,1248.7 1199.49,1262.3 1199.49,1277.42C1199.49,1305.54 1222.32,1328.38 1250.45,1328.38C1278.57,1328.38 1301.4,1305.54 1301.4,1277.42C1301.4,1262.3 1294.8,1248.7 1284.32,1239.37L1552.86,1239.37C1542.14,1230.02 1535.37,1216.28 1535.37,1200.96C1535.37,1172.84 1558.2,1150 1586.32,1150C1614.44,1150 1637.28,1172.84 1637.28,1200.96C1637.28,1216.27 1630.5,1230.02 1619.79,1239.37L1753.29,1239.37L1753.29,1374.4C1762.61,1364.2 1776.02,1357.8 1790.9,1357.8C1819.03,1357.8 1841.86,1380.64 1841.86,1408.76C1841.86,1436.88 1819.03,1459.71 1790.9,1459.71C1776.02,1459.71 1762.61,1453.31 1753.29,1443.12L1753.29,1710.73C1762.64,1699.44 1776.76,1692.24 1792.55,1692.24C1818.98,1692.24 1840.73,1712.4 1843.26,1738.16C1843.54,1740.31 1843.68,1742.51 1843.68,1744.74C1843.68,1772.86 1820.85,1795.69 1792.73,1795.69C1776.84,1795.69 1762.64,1788.4 1753.29,1776.99L1753.29,1912.25L1619.74,1912.25C1630.71,1921.6 1637.67,1935.51 1637.67,1951.04C1637.67,1979.16 1614.84,2002 1586.72,2002C1558.59,2002 1535.76,1979.16 1535.76,1951.04C1535.76,1935.51 1542.72,1921.6 1553.69,1912.25L1282.16,1912.25C1293.33,1902.9 1300.44,1888.85 1300.44,1873.16C1300.44,1845.04 1277.61,1822.2 1249.48,1822.2C1221.36,1822.2 1198.53,1845.04 1198.53,1873.16C1198.53,1888.85 1205.64,1902.9 1216.81,1912.25Z"
             style="fill:rgb(128,13,46);stroke:black;stroke-width:4.17px;" />
           <g transform="matrix(1,0,0,1,-1335.51,517.454)">
-            <text x="2664.93px" y="1037.86px"
+            <text class="data-text" x="2664.93px" y="1037.86px"
               style="font-family:'HelveticaNeue-Bold', 'Helvetica Neue';font-weight:700;font-size:83.333px;fill:white;">Data</text>
-            <text x="2597.89px" y="1123.61px"
+            <text class="data-text" x="2597.89px" y="1123.61px"
               style="font-family:'HelveticaNeue-Bold', 'Helvetica Neue';font-weight:700;font-size:83.333px;fill:white;">analysis</text>
           </g>
         </g>
-        <g>
+        <g onclick="showDiv('ss-div')">
           <path class="skill"
             d="M1215.28,904.298L1082.29,904.298L1082.29,767.638C1091.62,778.089 1105.2,784.672 1120.3,784.672C1148.42,784.672 1171.25,761.84 1171.25,733.717C1171.25,705.595 1148.42,682.763 1120.3,682.763C1105.2,682.763 1091.62,689.346 1082.29,699.796L1082.29,431.376C1072.94,442.765 1058.76,450.036 1042.89,450.036C1014.76,450.036 991.931,427.204 991.931,399.082C991.931,370.959 1014.76,348.127 1042.89,348.127C1058.76,348.127 1072.94,355.398 1082.29,366.787L1082.29,231.419L1216.86,231.419C1205.62,240.769 1198.46,254.857 1198.46,270.604C1198.46,298.727 1221.29,321.559 1249.41,321.559C1277.54,321.559 1300.37,298.727 1300.37,270.604C1300.37,254.857 1293.21,240.769 1281.97,231.419L1552.12,231.419C1540.85,222.07 1533.68,207.966 1533.68,192.199C1533.68,164.077 1556.51,141.245 1584.63,141.245C1612.75,141.245 1635.59,164.077 1635.59,192.199C1635.59,207.965 1628.41,222.068 1617.15,231.419L1754.31,231.419L1754.31,364.422C1763.66,353.233 1777.72,346.111 1793.42,346.111C1821.55,346.111 1844.38,368.943 1844.38,397.065C1844.38,425.188 1821.55,448.02 1793.42,448.02C1777.72,448.02 1763.66,440.897 1754.31,429.709L1754.31,703.349C1763.65,691.79 1777.95,684.393 1793.95,684.393C1822.08,684.393 1844.91,707.225 1844.91,735.348C1844.91,763.47 1822.08,786.302 1793.95,786.302C1777.95,786.302 1763.65,778.906 1754.31,767.347L1754.31,904.298L1621.21,904.298C1631.07,913.593 1637.22,926.767 1637.22,941.366C1637.22,969.489 1614.39,992.321 1586.27,992.321C1558.14,992.321 1535.31,969.489 1535.31,941.366C1535.31,926.766 1541.47,913.591 1551.32,904.298L1280.32,904.298C1291.58,894.948 1298.75,880.846 1298.75,865.081C1298.75,836.959 1275.92,814.127 1247.8,814.127C1219.67,814.127 1196.84,836.959 1196.84,865.081C1196.84,880.845 1204.02,894.946 1215.28,904.298Z"
             style="fill:rgb(128,13,46);stroke:black;stroke-width:4.17px;" />
           <g transform="matrix(1,0,0,1,-1334.02,-533.88)">
-            <text x="2500.08px" y="1037.86px"
+            <text class="ss-text" x="2500.08px" y="1037.86px"
               style="font-family:'HelveticaNeue-Bold', 'Helvetica Neue';font-weight:700;font-size:75px;fill:white;">Social
               science</text>
-            <text x="2602px" y="1115.04px"
+            <text class="sss-text" x="2602px" y="1115.04px"
               style="font-family:'HelveticaNeue-Bold', 'Helvetica Neue';font-weight:700;font-size:75px;fill:white;">r
               <tspan x="2629.83px 2672.88px " y="1115.04px 1115.04px ">es</tspan>ear<tspan x="2827.08px 2870.13px "
                 y="1115.04px 1115.04px ">ch</tspan></text>
-            <text x="2601.4px" y="1192.21px"
+            <text class="ss-text" x="2601.4px" y="1192.21px"
               style="font-family:'HelveticaNeue-Bold', 'Helvetica Neue';font-weight:700;font-size:75px;fill:white;">methods</text>
           </g>
         </g>
-        <g>
+        <g onclick="showDiv('web-div')">
           <path class="skill"
             d="M2288.99,1576.18L2424.61,1576.18L2424.61,1708.94C2433.96,1697.75 2448.01,1690.63 2463.72,1690.63C2491.84,1690.63 2514.67,1713.47 2514.67,1741.59C2514.67,1769.71 2491.84,1792.54 2463.72,1792.54C2448.01,1792.54 2433.96,1785.42 2424.61,1774.24L2424.61,2046.64C2415.26,2035.15 2401.01,2027.8 2385.06,2027.8C2356.94,2027.8 2334.11,2050.63 2334.11,2078.75C2334.11,2106.88 2356.94,2129.71 2385.06,2129.71C2401.01,2129.71 2415.26,2122.36 2424.61,2110.87L2424.61,2249.06L2289.68,2249.06C2300.76,2258.41 2307.8,2272.39 2307.8,2288.01C2307.8,2316.13 2284.96,2338.96 2256.84,2338.96C2228.72,2338.96 2205.89,2316.13 2205.89,2288.01C2205.89,2272.39 2212.93,2258.41 2224,2249.06L1952.67,2249.06C1963.82,2258.41 1970.91,2272.44 1970.91,2288.12C1970.91,2316.24 1948.08,2339.07 1919.96,2339.07C1891.84,2339.07 1869.01,2316.24 1869.01,2288.12C1869.01,2272.44 1876.1,2258.41 1887.25,2249.06L1752.59,2249.06L1752.59,2116.6C1761.94,2127.69 1775.93,2134.74 1791.55,2134.74C1819.67,2134.74 1842.51,2111.91 1842.51,2083.78C1842.51,2055.66 1819.67,2032.83 1791.55,2032.83C1775.93,2032.83 1761.94,2039.88 1752.59,2050.96L1752.59,1776.42C1761.94,1787.7 1776.05,1794.89 1791.84,1794.89C1819.96,1794.89 1842.79,1772.06 1842.79,1743.94C1842.79,1715.81 1819.96,1692.98 1791.84,1692.98C1776.05,1692.98 1761.94,1700.17 1752.59,1711.45L1752.59,1576.18L1886.49,1576.18C1876.52,1585.48 1870.28,1598.74 1870.28,1613.44C1870.28,1641.56 1893.11,1664.39 1921.23,1664.39C1949.35,1664.39 1972.18,1641.56 1972.18,1613.44C1972.18,1598.74 1965.94,1585.48 1955.97,1576.18L2221.06,1576.18C2210.63,1585.51 2204.07,1599.07 2204.07,1614.15C2204.07,1642.27 2226.9,1665.1 2255.02,1665.1C2283.15,1665.1 2305.98,1642.27 2305.98,1614.15C2305.98,1599.07 2299.41,1585.51 2288.99,1576.18Z"
             style="fill:rgb(128,13,46);stroke:black;stroke-width:4.17px;" />
           <g transform="matrix(1,0,0,1,-752.468,921.327)">
-            <text x="2746.05px" y="1037.86px"
+            <text class="web-text" x="2746.05px" y="1037.86px"
               style="font-family:'HelveticaNeue-Bold', 'Helvetica Neue';font-weight:700;font-size:83.333px;fill:white;">W
               <tspan x="2819.97px 2867.8px " y="1037.86px 1037.86px ">eb</tspan></text>
           </g>
         </g>
-        <g>
+        <g onclick="showDiv('design-div')">
           <path class="skill"
             d="M2556.93,906.98C2546.29,897.639 2539.58,883.943 2539.58,868.69C2539.58,840.568 2562.41,817.736 2590.53,817.736C2618.65,817.736 2641.49,840.568 2641.49,868.69C2641.49,883.943 2634.77,897.639 2624.14,906.98L2759.52,906.98L2759.52,1041.03C2768.86,1030.27 2782.65,1023.45 2798.01,1023.45C2826.13,1023.45 2848.97,1046.28 2848.97,1074.41C2848.97,1102.53 2826.13,1125.36 2798.01,1125.36C2782.65,1125.36 2768.86,1118.55 2759.52,1107.78L2759.52,1376.67C2750.17,1365.33 2736.01,1358.09 2720.18,1358.09C2692.05,1358.09 2669.22,1380.92 2669.22,1409.05C2669.22,1437.17 2692.05,1460 2720.18,1460C2736.01,1460 2750.17,1452.76 2759.52,1441.41L2759.52,1577.07L2625.12,1577.07C2636.5,1586.42 2643.77,1600.6 2643.77,1616.47C2643.77,1644.59 2620.94,1667.42 2592.81,1667.42C2564.69,1667.42 2541.86,1644.59 2541.86,1616.47C2541.86,1600.6 2549.12,1586.42 2560.51,1577.07L2288.08,1577.07C2298.74,1586.42 2305.46,1600.12 2305.46,1615.39C2305.46,1643.52 2282.63,1666.35 2254.51,1666.35C2226.39,1666.35 2203.55,1643.52 2203.55,1615.39C2203.55,1600.12 2210.28,1586.42 2220.94,1577.07L2087.5,1577.07L2087.5,1440.95C2096.85,1452.2 2110.94,1459.37 2126.7,1459.37C2154.82,1459.37 2177.65,1436.54 2177.65,1408.41C2177.65,1380.29 2154.82,1357.46 2126.7,1357.46C2110.94,1357.46 2096.85,1364.62 2087.5,1375.87L2087.5,1105.61C2078.16,1116.28 2064.43,1123.02 2049.15,1123.02C2021.03,1123.02 1998.2,1100.18 1998.2,1072.06C1998.2,1043.94 2021.03,1021.11 2049.15,1021.11C2064.43,1021.11 2078.16,1027.85 2087.5,1038.52L2087.5,906.98L2221.3,906.98C2210.42,916.328 2203.52,930.186 2203.52,945.642C2203.52,973.764 2226.35,996.596 2254.47,996.596C2282.6,996.596 2305.43,973.764 2305.43,945.642C2305.43,930.186 2298.53,916.328 2287.65,906.98L2556.93,906.98Z"
             style="fill:rgb(128,13,46);stroke:black;stroke-width:4.17px;" />
           <g transform="matrix(1,0,0,1,-361.62,207.024)">
-            <text x="2642.55px" y="1037.86px"
+            <text class="design-text" x="2642.55px" y="1037.86px"
               style="font-family:'HelveticaNeue-Bold', 'Helvetica Neue';font-weight:700;font-size:83.333px;fill:white;">Design</text>
           </g>
         </g>
-        <g>
+        <g onclick="showDiv('map-div')">
           <path class="skill"
             d="M545.271,900.688C535.62,891.414 529.61,878.378 529.61,863.949C529.61,835.827 552.442,812.995 580.565,812.995C608.687,812.995 631.519,835.827 631.519,863.949C631.519,878.378 625.509,891.414 615.858,900.688L882.887,900.688C871.993,910.036 865.087,923.902 865.087,939.368C865.087,967.491 887.919,990.323 916.041,990.323C944.164,990.323 966.996,967.491 966.996,939.368C966.996,923.902 960.09,910.036 949.196,900.688L1081.25,900.688L1081.25,1036.85C1090.52,1027.15 1103.59,1021.11 1118.05,1021.11C1146.17,1021.11 1169.01,1043.94 1169.01,1072.07C1169.01,1100.19 1146.17,1123.02 1118.05,1123.02C1103.59,1123.02 1090.52,1116.98 1081.25,1107.29L1081.25,1373.78C1090.59,1362.24 1104.87,1354.87 1120.85,1354.87C1148.98,1354.87 1171.81,1377.7 1171.81,1405.82C1171.81,1433.94 1148.98,1456.78 1120.85,1456.78C1104.87,1456.78 1090.59,1449.4 1081.25,1437.87L1081.25,1573.57L940.478,1573.57C952.036,1564.22 959.432,1549.93 959.432,1533.92C959.432,1505.8 936.6,1482.97 908.478,1482.97C880.355,1482.97 857.523,1505.8 857.523,1533.92C857.523,1549.93 864.918,1564.22 876.478,1573.57L615.123,1573.57C625.234,1582.88 631.572,1596.23 631.572,1611.05C631.572,1639.17 608.741,1662 580.618,1662C552.495,1662 529.664,1639.17 529.664,1611.05C529.664,1596.23 536.002,1582.88 546.113,1573.57L409.224,1573.57L409.224,1440.48C418.573,1451.82 432.73,1459.06 448.563,1459.06C476.686,1459.06 499.518,1436.23 499.518,1408.1C499.518,1379.98 476.686,1357.15 448.563,1357.15C432.73,1357.15 418.573,1364.39 409.224,1375.73L409.224,1103.31C399.771,1114.51 385.548,1121.64 369.653,1121.64C341.219,1121.64 318.134,1098.81 318.134,1070.69C318.134,1042.57 341.219,1019.74 369.653,1019.74C385.548,1019.74 399.771,1026.87 409.224,1038.08L409.224,900.688L545.271,900.688Z"
             style="fill:rgb(128,13,46);stroke:black;stroke-width:4.17px;" />
           <g transform="matrix(1,0,0,1,-2019.44,211.944)">
-            <text x="2584.76px" y="1037.86px"
+            <text class="map-text" x="2584.76px" y="1037.86px"
               style="font-family:'HelveticaNeue-Bold', 'Helvetica Neue';font-weight:700;font-size:83.333px;fill:white;">Mapping</text>
           </g>
         </g>
@@ -379,20 +385,86 @@
       </g>
     </svg>
 
+    <div class="output-div" id="data-div">
+      <h4>Data analysis</h4>
+      <p>I learnt <b>R</b> during modules on the Q-step part of my geography course, learning about basic data cleaning
+        and analysis, and later working on more advanced statistical techniques.</p>
+      <ul>
+        <li>Data cleaning</li>
+        <li>Descriptive statistics</li>
+        <li>Linear & multiple regression</li>
+        <li>Imputation</li>
+        <li>Missing data analysis</li>
+        <li>PCA, SEM, CFA/EFA</li>
+        <li>Cluster analysis</li>
+      </ul>
+    </div>
+
+    <div class="output-div" id="ss-div">
+      <h4>Social science reserach methods</h4>
+      <p>I undertook several research methods modules during my geography degree, learning about more general
+        theory, as well as studying causal analysis and using <b>R</b> for more advanced statistical topics.</p>
+      <ul>
+        <li>Experiments</li>
+        <li>IV estimation</li>
+        <li>Matching</li>
+        <li>Regression discontinutiy</li>
+        <li>Difference-in-difference</li>
+      </ul>
+    </div>
+
+    <div class="output-div" id="web-div">
+      <h4>Web</h4>
+      <p>Having dabbled in <b>HTML/CSS</b> before starting my course at Cardiff, my first module in web application
+        development
+        taught me how to properly build static HTML pages with appropriate CSS rules and selectors.</p>
+
+      <p>This module also introduced me to <b>Javascript</b>, and how to add interactivity into static HTML webpages.
+      </p>
+
+      <p>This year, I'm studying more about data visualisation by learning how to create static and
+        interactive charts in <b>d3.js</b>.</p>
+    </div>
+
+    <div class="output-div" id="design-div">
+      <h4>Design</h4>
+      <p>While I'm by no means an adept artist by hand, I've always been interested in graphic design.</p>
+      <p> I'm familiar with
+        <b>Adobe Photoshop</b> and <b>InDesign</b>, and have had more experience with <b>Illustrator</b>, mainly for
+        creating
+        infographic-style pieces. At the FT, I also used Illustrator to
+        finetune static graphics from SVG files.</p>
+    </div>
+
+    <div class="output-div" id="map-div">
+      <h4>Mapping</h4>
+      <p>I began mapping in <b>R</b> at UCL, using packages like <b>'tmap'</b> and <b>'ggmap'</b> to create static
+        visualisations. This
+        expanded into creating <b>cartograms</b> in R during my undergraduate dissertation, which investigated how
+        people
+        interpret and
+        understand different map forms.</p>
+      <p> I'm also familiar with web mapping tools like <b>MapBox</b>, <b>Flourish</b> and <b>DataWrapper</b>. During
+        my internship at the
+        FT,
+        I began to teach myself how to make maps in <b>QGIS</b>.</p>
+    </div>
+
+
 
   </div>
   <script>
-    var tools = d3.selectAll('.tool')
+    // var tools = d3.selectAll('.tool')
 
-    tools
-      .on('mouseover', function (d, i) {
-        d3.select(this)
-          .style('fill', '#3B8185');
-      })
-      .on("mouseout", function (d) {
-        d3.select(this)
-          .style("fill", "#095559");
-      });
+    // tools
+    //   .on('mouseover', function (d, i) {
+    //     d3.select(this)
+    //       .style('fill', '#3B8185');
+    //   })
+    //   .on("mouseout", function (d) {
+    //     d3.select(this)
+    //       .style("fill", "#095559");
+    //   });
 
     var skills = d3.selectAll('.skill')
 
@@ -405,6 +477,30 @@
         d3.select(this)
           .style("fill", "#800D2E");
       });
+
+
+
+    var showDiv = function (divClass) {
+
+      var outputs = document.getElementsByClassName("output-div")
+
+      for (var i = 0; i < outputs.length; i++) {
+        outputs[i].style.display = 'none'
+      };
+
+
+      var x = document.getElementById(divClass);
+
+      if (x.style.display === 'none') {
+        x.style.display = "block";
+      } else {
+        x.style.display = "none";
+      }
+    }
+
+    // var dataText = document.getElementsByClassName('.data-text')
+    // dataText
+    //   .on('click', showDiv("data-div"))
   </script>
 
 
