--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 				and clear, concise writing, I am now looking for opportunities to join this field.</p>
 		</div>
 		<div class="row justify-content-md-center mb-5">
-			<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+			<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 d-none d-sm-block">
 				<div class="card" style="width: 18rem;">
 					<img src="imgs/jigsaw.svg" class="card-img-top" alt="jigsaw skills">
 					<div class="card-body text-center">
@@ -73,7 +73,7 @@
 				</div>
 			</div>
 
-			<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+			<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 d-none d-sm-block">
 				<div class="card" style="width: 18rem;">
 					<img src="imgs/timeline.png" class="card-img-top" alt="jigsaw skills">
 					<div class="card-body  text-center">
@@ -82,7 +82,7 @@
 				</div>
 			</div>
 
-			<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+			<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 d-none d-sm-block">
 				<div class="card" style="width: 18rem;">
 					<img src="imgs/work.png" class="card-img-top" alt="jigsaw skills">
 					<div class="card-body text-center">
