--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 			</p>
 
 			<p>Having found that data journalism provides a great place to combine skills of research, analysis, design
-				and clear, concise writing, I am now looking for opportunities to join this field.</p>
+				and clear, concise writing, I am now looking for professional opportunities to join this field.</p>
 		</div>
 		<div class="row justify-content-md-center mb-5">
 			<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 d-none d-sm-block">
