--- a/skills.html
+++ b/skills.html
@@ -52,7 +52,7 @@
   <!-- Main page -->
   <div class="site-content skills-grid">
     <p id='clickmore'><em>Click on the big jigsaw pieces to find out more</em></p>
-    <svg class="jigsaw" viewBox="0 0 4678 3308"
+    <svg class="jigsaw img-fluid" viewBox="0 0 4678 3308"
       style="fill-rule:evenodd;clip-rule:evenodd;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:1.5;">
       <g transform="matrix(1.33333,0,0,1.33333,0,0)">
         <g transform="matrix(1,0,0,1,10.4038,-35.0231)">
