update home text margins

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 		</div>
 		<div class="row justify-content-md-center mb-5">
 			<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 d-none d-sm-block">
-				<div class="card" style="width: 20vw;">
+				<div class="card">
 					<img src="imgs/jigsaw.svg" class="card-img-top" alt="jigsaw skills">
 					<div class="card-body text-center">
 						<a href="skills.html" class="btn-block btn-light">Skills</a>
@@ -74,7 +74,7 @@
 			</div>
 
 			<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 d-none d-sm-block">
-				<div class="card" style="width: 20vw;">
+				<div class="card">
 					<img src="imgs/timeline.png" class="card-img-top" alt="jigsaw skills">
 					<div class="card-body  text-center">
 						<a href="experience.html" class="btn-block btn-light">Experience</a>
@@ -83,7 +83,7 @@
 			</div>
 
 			<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 d-none d-sm-block">
-				<div class="card" style="width: 20vw;">
+				<div class="card">
 					<img src="imgs/work.png" class="card-img-top" alt="jigsaw skills">
 					<div class="card-body text-center">
 						<a href="work.html" class="btn-block btn-light">Work</a>
