Correct spelling errors

--- a/skills.html
+++ b/skills.html
@@ -403,14 +403,14 @@
     </div>
 
     <div class="output-div" id="ss-div">
-      <h4>Social science reserach methods</h4>
+      <h4>Social science research methods</h4>
       <p>I undertook several research methods modules during my geography degree, learning about more general
         theory, as well as studying causal analysis and using <b>R</b> for more advanced statistical topics.</p>
       <ul>
         <li>Experiments</li>
         <li>IV estimation</li>
         <li>Matching</li>
-        <li>Regression discontinutiy</li>
+        <li>Regression discontinuity</li>
         <li>Difference-in-difference</li>
       </ul>
     </div>
@@ -434,7 +434,7 @@
         <b>Adobe Photoshop</b> and <b>InDesign</b>, and have had more experience with <b>Illustrator</b>, mainly for
         creating
         infographic-style pieces. At the FT, I also used Illustrator to
-        finetune static graphics from SVG files.</p>
+        fine-tune static graphics from SVG files.</p>
     </div>
 
     <div class="output-div" id="map-div">
